--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -1,17 +1,14 @@
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
-    <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
-        <h1>
-            <span data-bind="css: pageHeadingIconClass"></span>
-            <span data-bind="text: pageHeading"></span>
-        </h1>
-        <span data-bind="text: pageSubNavigation"></span>
-        <a href="#">change</a>
+    <div class="oj-md-12 oj-col homeWrapper">
+        <div id="homeSection" class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
+            <h1>
+                <span data-bind="text: pageHeading"></span>
+            </h1>
+            <span data-bind="text: pageSubNavigation"></span>
+            <a href="#">change</a>
+        </div>
     </div>
-    
-     
-    
-
 </script>
 <!-- small template -->
 <script type="text/html" id="sm_template">
