--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
@@ -9,7 +9,7 @@
     </div>
     <div class="oj-row">
         <div class="oj-md-12">
-            <div class="scheduleHeader"> Schedule <span class="timeOffRequest"><a data-bind="click:$parent.editRequestTimehandleOpen">Time Off Request</a></span></div>
+            <div class="scheduleHeader"> <h2>Schedule</h2> <span class="timeOffRequest"><a data-bind="click:$parent.editRequestTimehandleOpen">Time Off Request</a></span></div>
         </div> 
     </div>
     <div class="oj-row">
