--- a/OracleJETApplication/templates/footer.tmpl.html
+++ b/OracleJETApplication/templates/footer.tmpl.html
@@ -13,6 +13,7 @@
 -->
     </div>
 
-    <div class="oj-col">Copyright &copy; 2014, 2015 Oracle and/or its affiliates. All rights reserved</div>
+    <div class="oj-md-1 oj-lg-2 oj-col">&nbsp;</div>
+    <div class="oj-md-11 oj-lg-10 oj-col">Copyright &copy; 2014, 2015 Oracle and/or its affiliates. All rights reserved</div>
 
 </div>
