--- a/OracleJETApplication/templates/profile/payroll/payroll-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/payroll/payroll-small.tmpl.html
@@ -1,13 +1,5 @@
 <div class="justifyCenter">
-    <div class="oj-row">
-        <div class="oj-col oj-sm-8">
-<!--            <h2 id="currentPage" data-bind="text: label"></h2>-->
-         <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
-        </div>
-        <div class="oj-col oj-sm-4 oj-lg-text-align-end">
-            <a data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Payroll Edit <i class="fa fa-pencil-square-o"></i></a>
-        </div>
-    </div>
+
     <div class="oj-row">
         <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}">
             <div id="general" data-bind="ojComponent: {component: 'ojCollapsible', expanded:true}">
@@ -128,5 +120,14 @@
                 </div>
         </div>
     </div>
+    <div class="oj-row subToolRow">
+        <hr class="oj-sm-12" />
+        <div class="oj-col oj-sm-10">
+             <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}"><i class="fa fa-arrow-circle-left"></i> Back to Search</a>
+        </div>
+        <div class="oj-col oj-sm-2">
+            <a data-bind="click: $parent.handleOpen('#empPayrollDialog')" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
+        </div>
+    </div> 
 </div>
 <div data-bind="template: {name: 'partials/employee-payroll-edit-modal/employee-payroll-edit-modal-small'}"></div>
