--- a/OracleJETApplication/templates/profile/permissions/permissions-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/permissions/permissions-small.tmpl.html
@@ -1,12 +1,7 @@
 <div class="justifyCenter">
-    <div class="oj-row">
-        <div class="oj-col oj-sm-10">
-        <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
-        </div>
-        <div class="oj-col oj-sm-2 oj-lg-text-align-end">
-<!--            <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>-->
-        </div>
-    </div>
+
+    
+    
 <!--    <hr class="oj-col oj-sm-12" />-->
     <div class="oj-row">
         <div class="oj-col oj-sm-12">
@@ -51,6 +46,15 @@
         <div class="oj-col oj-sm-12">
             <div class="portalRevenueCenterHeader">Revenue Centers</div>
             
+        </div>
+    </div>
+    <div class="oj-row subToolRow">
+        <hr class="oj-sm-12" />
+        <div class="oj-col oj-sm-10">
+             <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}"><i class="fa fa-arrow-circle-left"></i> Back to Search</a>
+        </div>
+        <div class="oj-col oj-sm-2">
+            <a data-bind="click: $parent.handleOpen('#scheduleDetailDialog')" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
         </div>
     </div>
 </div>
