--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -1,45 +1,41 @@
-<div class="oj-row">
-    <div class="oj-col oj-sm-10">
-        <h2> <span id="currentPage" data-bind="text: label"></span> <a href="#"><i class="fa fa-question-circle"></i></a></h2>
-    </div>
-    <div class="oj-col oj-sm-2 oj-lg-text-align-end">
-        <a data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit <i class="fa fa-pencil-square-o"></i></a>
-    </div>
-</div>
+
 <div class="oj-row">
     <div class="oj-col oj-md-6 noLeftPadding">
         <h3>General</h3>
         <div class="oj-row leftPadding">
             <div class="oj-md-6 oj-col">
-                <h4>Name</h4>
-                <span data-bind="text: $parent.firstName()"></span>
-                <span data-bind="text: $parent.lastName()"></span>
+                <div class="oj-md-12 oj-col">
+                    <h4>Name</h4>
+                    <span data-bind="text: $parent.firstName() + ' ' + $parent.lastName()"></span>
 
-                <div data-bind="visible: $parent.posCheckName()">
-                    <h4>POS Check Name <a href="#"><i class="fa fa-question-circle"></i></a></h4>
-                    <div data-bind="text: $parent.posCheckName()"></div>
                 </div>
 
-                <h4>Language</h4>
-                <div data-bind="text: $parent.language()"></div>
-
-                <h4>Time Zone</h4>
-                <div data-bind="text: $parent.timeZone()"></div>
-
-                <div>
+<!--                <div data-bind="visible: $parent.posCheckName()">
+                    <h4>POS Check Name <a href="#"><i class="fa fa-question-circle"></i></a></h4>
+                    <div data-bind="text: $parent.posCheckName()"></div>
+                </div>-->
+                <div class="oj-md-12 oj-col">
+                    <h4>Language</h4>
+                    <span data-bind="text: $parent.language()"></span>
+                </div>
+                <div class="oj-md-12 oj-col">
+                    <h4>Time Zone</h4>
+                    <div data-bind="text: $parent.timeZone()"></div>
+                </div>
+                <div class="oj-md-12 oj-col">
                     <h4>Ethnicity</h4>
                     <div data-bind="text: $parent.ethnicity()"></div>
                 </div>
-                <div>
-                    <h4>Gender</h4>
-                    <div data-bind="text: $parent.gender()"></div>
+                    <div>
+                        <h4>Gender</h4>
+                        <div data-bind="text: $parent.gender()"></div>
+                    </div>
                 </div>
-            </div>
             <div class="oj-md-6 oj-col ">
-
+<!--
                 <h4>Profile Picture</h4>
-                <!--Not hooked up to an observable this may need to be an upload feature-->
-                <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
+                Not hooked up to an observable this may need to be an upload feature
+                <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />-->
 
 
                 <!--doesn't update on modal change, need to work on this-->
@@ -66,9 +62,9 @@
         <h3>Contact</h3>
         <div class="oj-row leftPadding">
             <div class="oj-col oj-md-6">
-                <div>
+                <div class="contactColumn">
                     <h4>Email Address</h4>
-                    <a style="font-weight: bold;" data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a>
+                    <a style="font-weight: bold;" data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a><i class="fa fa-envelope"></i>
                     <div data-bind="visible: $parent.receiveEmailNotification() == 1">
                         <div><i class="fa fa-check"></i> Receive email notifications</div>
                     </div>
@@ -119,44 +115,9 @@
     </div>
     <div class="oj-col oj-md-12">
         <h3>Custom</h3>
-        <div class="oj-col oj-md-6">
-            <a data-bind="click: function(){console.log($parent);}">Find me</a>
-            <div class="textbold">History</div>
-            <div id="barChart" data-bind="ojComponent: {
-                    component: 'ojChart', 
-                    type: 'bar', 
-                    selectionMode: 'none',
-                    dataCursor: 'on',
-                    orientation: 'vertical',
-                    stack: 'off',
-                    series: $parent.barSeriesValue, 
-                    groups: $parent.barGroupsValue, 
-                    animationOnDisplay: 'auto',
-                    animationOnDataChange: 'auto',
-                    hoverBehavior: 'dim'
-                }"
-                 style="max-width:500px;width:100%;height:350px;">
-            </div>
-        </div>
         
-        <div class="oj-col oj-md-6">
-        <!-- ko foreach: $parent.directReports -->
-            <div class="oj-col oj-lg-6" style="padding: 5px;">
-                <div class="oj-row">
-                    <div class="oj-col oj-sm-6">
-                        <img class="demo-circular demo-employee-photo" data-bind="attr: {src: $parents[1].getPhoto(empId)}"/>
-                    </div>
-                    <div class="oj-col oj-sm-6">
-                        <div class="demo-employee-name" data-bind="text: firstName + ' ' + lastName"></div>
-                        <div class="demo-employee-title" data-bind="text: title"></div>
-                        <div class="demo-employee-dept" data-bind="text: deptName"></div>
-                    </div>
-                </div>
-            </div>
-        <!-- /ko -->
-    </div>
     <div class="oj-col oj-md-12 oj-lg-text-align-end">
-         <a data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
+         <a data-bind="attr:{href: 'index.html?root=people'}">back to search <i class="fa fa-arrow-circle-right"></i></a>
     </div>
 </div>
 </div>
